Salesforce Chatter/src/objects/Customer_Media__c.object
<CustomObject>
    <description>Juction object for customer and Media</description>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customer-Media</relationshipLabel>
        <relationshipName>Customer_Media</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media__c</fullName>
        <label>Media</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Media__c.Available__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Media__c</referenceTo>
        <relationshipLabel>Customer-Media</relationshipLabel>
        <relationshipName>Customer_Media</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Penalty_Amount__c</fullName>
        <formula>(TODAY() -  Return_date__c )* Media__r.Loss_Fine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Penalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_date__c</fullName>
        <formula>Issue_Date__c +15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return date</label>
        <type>Date</type>
    </fields>
    <label>Customer-Media</label>
    <nameField>
        <displayFormat>PO-{000}</displayFormat>
        <label>Customer-Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer-Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>